--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 
 
 # Backend API URL (Uncomment the line below to use a production API)
-# VITE_API_URL=https://yoursite.com/
+# VITE_API_URL=https://resume-builder-backend-2nd1.onrender.com
 
 # Backend API URL (where your backend is deployed)
 VITE_API_URL=http://localhost:5000
