Made responsive  for all screens.

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "axios": "^1.13.2",
+    "file-saver": "^2.0.5",
     "framer-motion": "^12.24.10",
     "lucide-react": "^0.562.0",
     "pdfmake": "^0.2.20",
@@ -22,6 +23,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@types/file-saver": "^2.0.7",
     "@types/node": "^25.0.3",
     "@types/pdfmake": "^0.2.12",
     "@types/react": "^19.2.7",
