--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-hook-form": "^7.71.1",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.11.0",
+    "sweetalert2": "^11.26.17",
     "tailwindcss": "^4.1.18",
     "zod": "^4.3.5"
   },
